Fixed img size on mobile screens

--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -24,7 +24,7 @@
 
 .img {
   width: 300px;
-  height: 325px;
+  height: 322px;
 }
 
 .aboutContentContainer {
@@ -59,7 +59,7 @@
 @media screen and (max-width: 1090px) {
   .img {
     width: 250px;
-    height: 300px;
+    height: 268px;
   }
   .container {
     flex-direction: column;
